[package]
authors = ["tharun"]
edition = "2018"
name = "crypto_tracker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde_json = "1.0.59"
tokio = {version = "1", features = ["full"]}
dotenv="0.15"
lettre="0.9"
lettre_email="0.9"
chrono="0.4.19"